# heudiconv

./: .gitignore  README.rst  mypy.ini  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yaml  license_check.yaml  package.yaml
conda.recipe/: recipe.yaml
src/heudiconv/: __init__.py  bids.py  convert.py  dicoms.py  info.py  main.py  parser.py  utils.py
src/heudiconv/cli/: monitor.py  run.py
src/heudiconv/heuristics/: convertall_custom.py  reproin.py  test_reproin.py
src/heudiconv/tests/: test_archives.py  test_bids.py  test_convert.py  test_dicoms.py  test_heuristics.py  test_main.py  test_monitor.py  test_queue.py  test_regression.py  test_tarballs.py  test_utils.py  utils.py
tests/: test_main.py
