# packaging information
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = 'vcs'

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "heudiconv"
dynamic = ["version"]
readme = "README.rst"
requires-python = ">=3.11,<3.13"
dependencies = []

[project.scripts]
heudiconv = "heudiconv.cli.run:main"

[tool.ruff]
src = ["src"]
lint.ignore = ["E501", "E712", "E731"]
lint.select = ["E", "F", "I", "W"]
lint.fixable = ["I", "W", "F401", "E711"]
line-length = 88
exclude = [".env", ".venv", "venv", "notebooks", "docs"]

[tool.pixi.workspace]
name = "heudiconv"
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
heudiconv = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
nibabel = ">=5.3.2,<6"
